fix: truncate last message includes html content - MEED-9083 - Meeds-io/MIPs#163 (#181)
truncate last message includes html content

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -19,6 +19,9 @@
 
     .chat-room-last-message {
       width: 260px;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
     }
 
     .unread-messages {
